--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -60,6 +60,60 @@
       "problemMatcher": [
         "$eslint-stylish"
       ]
+    },
+    {
+      "label": "Update Lambda Revision",
+      "type": "shell",
+      "command": [
+        "ts-node ./scripts/update-lambda-revision-id.ts"
+      ],
+      "problemMatcher": [],
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      }
+    },
+    {
+      "label": "Release and Deploy Lambda",
+      "type": "shell",
+      "command": [
+        "npm run release;",
+        "ask deploy --profile \"YOUR-ASK-CLI-PROFILE\" --target \"lambda\""
+      ],
+      "problemMatcher": [],
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      }
+    },
+    {
+      "label": "Download Remote Skill (Full)",
+      "type": "shell",
+      "command": [
+        "skillId=$(node ./scripts/get-skill-id.js);",
+        "rm -r remote/;",
+        "mkdir ./remote;",
+        "cd remote;",
+        "ask clone --skill-id $skillId --profile \"YOUR-ASK-CLI-PROFILE\""
+      ],
+      "problemMatcher": [],
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      }
+    },
+    {
+      "label": "Quick-Release and Deploy Lambda",
+      "type": "shell",
+      "command": [
+        "npm run quick-release;",
+        "ask deploy --profile \"YOUR-ASK-CLI-PROFILE\" --target \"lambda\""
+      ],
+      "problemMatcher": [],
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      }
     }
   ]
 }
