--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "release-minor": "npm version minor & npm run release",
     "release-major": "npm version major & npm run release",
     "release": "npm run build && npm run clean:release && npm run copy:release && npm run build:release",
+    "quick-release": "npm run build && rimraf lambda/custom/{lib}/**/*.* && rimraf lambda/custom/*.* && npm run copy:release",
     "build:release": "cd lambda/custom/ && npm install --production && rimraf \"package*.json\" && bestzip \"../release_$npm_package_version.zip\" * && cd ../..",
     "clean:release": "rimraf lambda/custom/",
     "copy:release": "cpx \"out/build/**/*.js\" lambda/custom/ && cpx \"src/**/*.{sql}\" lambda/custom/ && cpx \"package.json\" lambda/custom/"
